--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,10 @@
     "tools_manager.iml": true,
     ".idea": true,
     "build": true,
-    "android": false,
     ".flutter-plugins": true,
-    ".flutter-plugins-dependencies": true
+    ".flutter-plugins-dependencies": true,
+    "ios": true,
+    "android": true
   },
   "editor.formatOnSave": true,
   "editor.rulers": [
